Fixed overlapping play button with header

--- a/src/app/content-block/content.block.component.scss
+++ b/src/app/content-block/content.block.component.scss
@@ -8,6 +8,7 @@
         left: 15vw;
         width: 85%;
         height: 10vh;
+        z-index: 1;
     }
 
     .container {
